plugins {
    id 'org.openjfx.javafxplugin' version '0.0.13' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'application'

    group 'de.mi'
    version '0.5.4'

    sourceCompatibility = '17'
    targetCompatibility = '17'

    ext {
        jdbcVersion = '8.0.31'
        junitVersion = '5.9.0'
        jerseyVersion = '3.1.0'
        grizzlyVersion = '4.0.0'
        restVersion = '3.1.0'
        jaxbVersion = '4.0.0'
        jacksonVersion = '3.1.0'
    }

    run {
        standardInput = System.in
        standardOutput = System.out
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
        testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
    }

    test {
        useJUnitPlatform()
    }
}